// Licensed to SolID under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. SolID licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package oidc.core.v1;

option go_package = "oidc/core/v1;corev1";

import "oidc/core/v1/core.proto";
import "oidc/core/v1/core_api.proto";
import "oidc/core/v1/client.proto";

message AuthorizationCodeSession {
  Client client = 1;
  string issuer = 2;
  AuthorizationRequest request = 3;
  string subject = 4;
}

enum DeviceCodeStatus {
  DEVICE_CODE_STATUS_INVALID = 0;
  DEVICE_CODE_STATUS_UNKNOWN = 1;
  DEVICE_CODE_STATUS_AUTHORIZATION_PENDING = 2;
  DEVICE_CODE_STATUS_VALIDATED = 3;
}

message DeviceCodeSession {
  Client client = 1;
  string issuer = 2;
  DeviceAuthorizationRequest request = 3;
  string device_code = 4;
  string user_code = 5;
  fixed64 expires_at = 6;
  DeviceCodeStatus status = 7;
  string scope = 8;
  string audience = 9;
  string subject = 10;
}
